@@ -1,129 +1,95 @@
-<project name="HelloWorld" default="build">
-
-  <property file="../../languages/build.properties"/>
+<project name="mbeddr tutorial" default="run-tests">
+	
+  <property file="build.properties"/>  
+  <taskdef name="make-tests" classname="com.mbeddr.tools.ant.MakeTestsTask" classpath="${mbeddr.github.core.home}/tools/ant/tasks/MakeTestsTask.jar" />
   
-  <property name="languagesDir" value="${mbeddr.github.core.home}/code/languages/"/>
+  <!-- com.mbeddr.tutorial -->  
+  <property name="com.mbeddr.tutorial.build-path.postfix" value="${mbeddr.github.core.home}/build/com.mbeddr.tutorial/build/artifacts/com.mbeddr.tutorial.build" />  
+  <property name="com.mbeddr.tutorial.build-file.location" value="${mbeddr.github.core.home}/build/com.mbeddr.tutorial" />     
+  <property name="com.mbeddr.tutorial.languages-build-file.name" value="build-languages.xml" /> 
+  <property name="com.mbeddr.tutorial.solutions-build-file.name" value="build-solutions.xml" /> 
+  <property name="com.mbeddr.tutorial.tests-build-file.name" value="build-tests.xml" /> 
+  <property name="com.mbeddr.tutorial.working-dir" value="${mbeddr.github.core.home}/code/applications/tutorial" />
   
-  <property name="mbeddr.tutorial.project.dir" value="code/applications/tutorial"/>
-  <property name="mbeddr.tutorial.project.mpr" value="code/applications/tutorial/mbeddr.tutorial.mpr"/>
+  <!-- multiline -->  
+  <property name="multiline.zip-file.name" value="mps-multiline.zip" />
+  <property name="multiline.expanded-folder.name" value="mps-multiline" />
+  <property name="multiline.build-id" value="bt28" />  
+  <property name="multiline.build-path" value="${mbeddr.github.core.home}/build/mps-multiline/build/artifacts/mps-multiline" />  
+  <property name="artifacts.mps-multiline" value="${multiline.build-path}" />  
+    
+  <!-- mps-richtext -->  
+  <property name="mps-richtext.zip-file.name" value="mps-richtext.zip" />
+  <property name="mps-richtext.expanded-folder.name" value="mps-richtext" />
+  <property name="mps-richtext.build-id" value="bt29" />
+  <property name="mps-richtext.build-path" value="${mbeddr.github.core.home}/build/mps-richtext/build/artifacts/mps-richtext" />  
+  <property name="artifacts.mps-richtext" value="${mps-richtext.build-path}" />  
   
-  <property name="mbeddr.core.project.dir" value="code/languages/com.mbeddr.core"/>
-  <property name="mbeddr.core.project.mpr" value="code/languages/com.mbeddr.core/core.dev.mpr"/>
+  <!-- mps-editor-override -->
+  <property name="mps-editor-override.zip-file.name" value="mps-editor-override.zip" />
+  <property name="mps-editor-override.expanded-folder.name" value="mps-editor-override" />  
+  <property name="mps-editor-override.build-id" value="bt27" />   
+  <property name="mps-editor-override.build-path" value="${mbeddr.github.core.home}/build/mps-editor-override/build/artifacts/mps-editor-override" />  
+  <property name="artifacts.mps-editor-override" value="${mps-editor-override.build-path}" />  
   
-  <property name="mbeddr.ext.project.dir" value="code/languages/com.mbeddr.ext"/>
-  <property name="mbeddr.ext.project.mpr" value="code/languages/com.mbeddr.ext/ext.dev.mpr"/> <!-- for the time being in core project... -->
-
-  <property name="mbeddr.doc.project.dir" value="code/languages/com.mbeddr.doc"/>
-  <property name="mbeddr.doc.project.mpr" value="code/languages/com.mbeddr.doc/com.mbeddr.doc.mpr"/> 
-
-  <property name="mbeddr.util.project.dir" value="code/languages/com.mbeddr.mpsutil"/>
-  <property name="mbeddr.util.project.mpr" value="code/languages/com.mbeddr.mpsutil/mpsutil.dev.mpr"/>
-
-  <property name="mbeddr.analyses.project.dir" value="code/languages/com.mbeddr.analyses"/>
-  <property name="mbeddr.analyses.project.mpr" value="code/languages/com.mbeddr.analyses/analyses.dev.mpr"/> <!-- for the time being in core project... -->
+  <!-- mps-tables -->
+  <property name="mps-tables.zip-file.name" value="mps-tables.zip" />
+  <property name="mps-tables.expanded-folder.name" value="mps-tables" />  
+  <property name="mps-tables.build-id" value="bt42" />   
+  <property name="mps-tables.build-path" value="${mbeddr.github.core.home}/build/mps-tables/build/artifacts/mps-tables" />  
+  <property name="artifacts.mps-tables" value="${mps-tables.build-path}" />  
+    
+  <!-- misc -->
+  <property name="clean-generated-code.task" value="cleanSources" /> 
+  <property name="clean-plugins.task" value="clean" /> 
+  <property name="generate-code.task" value="generate" /> 
+  <property name="build-plugin.task" value="assemble" /> 
+  <property name="run-tests.task" value="check" />     
+  <property name="plugins.folder.name" value="plugins"/>
   
-  <property name="mbeddr.cc.project.dir" value="code/languages/com.mbeddr.cc"/>
-  <property name="mbeddr.cc.project.mpr" value="code/languages/com.mbeddr.cc/cc.dev.mpr"/> <!-- for the time being in core project... -->
-  
-  <property name="mbeddr.debugger.project.dir" value="code/languages/com.mbeddr.debugger/"/>
-  <property name="mbeddr.debugger.project.mpr" value="code/languages/com.mbeddr.debugger/debugger.dev.mpr"/>
-  
-  <property name="utilLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.util.project.dir}/languages"/>
-  <property name="debuggerLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.debugger.project.dir}/languages"/>
-  <property name="coreLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.core.project.dir}/languages"/>
-  <property name="docLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.doc.project.dir}/languages"/>
-  <property name="extLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.ext.project.dir}/languages"/>
-  <property name="ccLanguageDir" value="${mbeddr.github.core.home}/${mbeddr.cc.project.dir}/languages"/>
-  <property name="analysesanguageDir" value="${mbeddr.github.core.home}/${mbeddr.analyses.project.dir}/languages"/>
-  
-  <!-- validate if path properties are set in build.properties -->
-  <fail unless="mbeddr.github.core.home">mbeddr.github.core.home must be set in your build.properties</fail>
-  <fail unless="mps.platform.caches">mps.platform.caches must be set in your build.properties</fail>
+  <!-- validations -->
   <fail unless="mps.home">mps.home must be set in your build.properties</fail>
+  <fail unless="mbeddr.github.core.home">mbeddr.github.core.home must be set in your build.properties</fail>
+  <fail message="Your MPS installation (${mps.home}) doesn't contain a ${plugins.folder.name} folder">
+      <condition>
+          <not>
+              <resourcecount count="1">
+				  <dirset dir="${mps.home}" >
+					  <include name="${plugins.folder.name}"/>
+				  </dirset> 
+              </resourcecount>
+          </not>
+      </condition>
+  </fail>
+  	
   
-  <path id="mps.ant.path">
-   <pathelement location="${mps.home}/lib/mps-backend.jar"/>
-   <pathelement location="${mps.home}/lib/jdom.jar"/>
-   <pathelement location="${mps.home}/lib/log4j.jar"/>
-   <pathelement location="${mps.home}/lib/mps-core.jar"/>
- </path>
-
- <taskdef resource="jetbrains/mps/build/ant/antlib.xml"
-          classpathref="mps.ant.path"/>
- <taskdef name="make-tests" classname="com.mbeddr.tools.ant.MakeTestsTask" 
-	 	  classpath="${mbeddr.github.core.home}/tools/ant/tasks/MakeTestsTask.jar" />
- 
-  <jvmargs id="myargs">
-      <arg value="-ea"/>
-      <arg value="-Xss1024k"/>
-      <arg value="-Xmx2048m"/>
-      <arg value="-XX:MaxPermSize=128m"/>
-      <arg value="-XX:+HeapDumpOnOutOfMemoryError"/>
-	  <arg value="-Didea.system.path=${mps.platform.caches}/system"/>
-	  <arg value="-Didea.config.path=${mps.platform.caches}/config"/>
-	  <arg value="-Didea.plugins.path=${mps.platform.caches}/plugins"/>
-  </jvmargs>
-
-
-  <target name="init">
-      <delete dir="${mps.platform.caches}"/>
-      <mkdir dir="${mps.platform.caches}"/>
-  </target>
-
-  <target name="build" depends="init, build-languages, build-solutions">
-  </target>
-
-
-  <target name="build-solutions" depends="init">
-    <mps.generate parallelMode="true" fork="true">
-      <jvmargs refid="myargs"/>
-      <macro name="mbeddr.github.core.home" path="${mbeddr.github.core.home}"/>
-	  <project file="${mbeddr.github.core.home}/code/applications/tutorial/mbeddr.tutorial.mpr"/>
-	  
-      <library name="util.project" dir="${utilLanguageDir}"/>                                                                                                
-      <library name="core.project" dir="${coreLanguageDir}"/>                                                                                                
-      <library name="debugger.project" dir="${debuggerLanguageDir}"/>                                                                                        
-      <library name="ext.project" dir="${extLanguageDir}"/> 
-      <library name="doc.project" dir="${docLanguageDir}"/> 
-      <library name="cc.project" dir="${ccLanguageDir}"/> 
-	  <library name="analyses.project" dir="${analysesanguageDir}"/> 
-      <library name="tutorial.project" dir="${mbeddr.github.core.home}/${mbeddr.tutorial.project.dir}/solutions"/> 	  
-    </mps.generate>
-  </target>
-
-
-
-  <target name="build-languages" depends="init">
-    <mps.generate parallelMode="true" fork="true">
-      <jvmargs refid="myargs"/>
-      <macro name="mbeddr.github.core.home" path="${mbeddr.github.core.home}"/>
-	  <project file="${mbeddr.github.core.home}/code/applications/tutorial/mbeddr.tutorial.mpr"/>
-	  
-      <library name="util.project" dir="${utilLanguageDir}"/>                                                                                                
-      <library name="core.project" dir="${coreLanguageDir}"/>                                                                                                
-      <library name="debugger.project" dir="${debuggerLanguageDir}"/>                                                                                        
-      <library name="ext.project" dir="${extLanguageDir}"/> 
-      <library name="doc.project" dir="${docLanguageDir}"/> 
-      <library name="cc.project" dir="${ccLanguageDir}"/> 
-	  <library name="analyses.project" dir="${analysesanguageDir}"/> 
-      <library name="tutorial.project" dir="${mbeddr.github.core.home}/${mbeddr.tutorial.project.dir}/languages"/> 
-    </mps.generate>
-  </target>
-
-
-
-
-
-  <target name="zipit">
-    <zip 
-    	destfile="${mbeddr.github.core.home}/build/apps/mbeddr.tutorial/com.mbeddr.tutorial.zip"
-    	basedir="${mbeddr.github.core.home}/code/applications/tutorial"
-    	excludes="solutions/**/source_gen/, solutions/**/source_gen.caches/, solutions/**/classes_gen/"
-    	/>
-  </target>
-
-  <target name="make-tests" description="Run 'make test' for child Makefiles">
-  	<make-tests workingDirectory="${basedir}"/>		
+  <target name="clean-languages">
+  	<!-- clean generated code -->
+  	<ant antfile="${com.mbeddr.tutorial.languages-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-generated-code.task}" />
+  	<ant antfile="${com.mbeddr.tutorial.solutions-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-generated-code.task}" />
+  	<!-- clean compiled plugin code -->  
+	<ant antfile="${com.mbeddr.tutorial.languages-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-plugins.task}" />
+	<ant antfile="${com.mbeddr.tutorial.solutions-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-plugins.task}" />
   </target>
   
-</project>
+  <target name="build-languages" depends="clean-languages" >
+    <ant antfile="${com.mbeddr.tutorial.languages-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${generate-code.task}" />
+    <ant antfile="${com.mbeddr.tutorial.languages-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${build-plugin.task}" />
+    <ant antfile="${com.mbeddr.tutorial.solutions-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${generate-code.task}" />
+    <ant antfile="${com.mbeddr.tutorial.solutions-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${build-plugin.task}" />   
+  </target>	
+  
+  <target name="clean-tests">
+  	<!-- clean generated code -->
+  	<ant antfile="${com.mbeddr.tutorial.tests-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-generated-code.task}" />
+  	<!-- clean compiled plugin code -->  
+	<ant antfile="${com.mbeddr.tutorial.tests-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${clean-plugins.task}" />   	 
+  </target>
+  
+  <target name="build-and-run-test" depends="clean-tests">
+    <ant antfile="${com.mbeddr.tutorial.tests-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${generate-code.task}" />
+    <ant antfile="${com.mbeddr.tutorial.tests-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${build-plugin.task}" />
+  	<ant antfile="${com.mbeddr.tutorial.tests-build-file.name}" dir="${com.mbeddr.tutorial.build-file.location}" target="${run-tests.task}" />  
+  </target>
+  
+</project>  
